--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[0]}} <!-- Associated Helper in Main -->
-                <td>Streak Data:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{STREAK.[0]}}<td>
+                <td>Longest Streak:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{STREAK.[0]}}<td>
                 {{else}}
                 <td>Streak Is Blind, No Streak Data Visible<td>
                 {{/ifStreakIsBlind}}
@@ -504,15 +504,50 @@
             chart.draw(data, chartOptions);
         }
 
-        google.charts.setOnLoadCallback(drawChartd2);
-        google.charts.setOnLoadCallback(drawChartd3);
-        google.charts.setOnLoadCallback(drawChartd4);
-        google.charts.setOnLoadCallback(drawChartd6);
-        google.charts.setOnLoadCallback(drawChartd8);
-        google.charts.setOnLoadCallback(drawChartd10);
-        google.charts.setOnLoadCallback(drawChartd12);
-        google.charts.setOnLoadCallback(drawChartd20);
+        if({{TOTAL_ROLLS.[0]}} > 0)
+        {
+            google.charts.setOnLoadCallback(drawChartd2);
+        }
 
+        if({{TOTAL_ROLLS.[1]}} > 0)
+        {
+            google.charts.setOnLoadCallback(drawChartd3);
+        }
+
+        if({{TOTAL_ROLLS.[2]}} > 0)
+        {
+            google.charts.setOnLoadCallback(drawChartd4);
+        }
+
+        if({{TOTAL_ROLLS.[3]}} > 0)
+        {
+            google.charts.setOnLoadCallback(drawChartd6);
+        }
+
+        if({{TOTAL_ROLLS.[4]}} > 0)
+        {
+            google.charts.setOnLoadCallback(drawChartd8);
+        }
+
+        if({{TOTAL_ROLLS.[5]}} > 0)
+        {
+            google.charts.setOnLoadCallback(drawChartd10);
+        }
+
+        if({{TOTAL_ROLLS.[6]}} > 0)
+        {
+            google.charts.setOnLoadCallback(drawChartd12);
+        }
+
+        if({{TOTAL_ROLLS.[7]}} > 0)
+        {
+            google.charts.setOnLoadCallback(drawChartd20);
+        }
+
+        if({{TOTAL_ROLLS.[8]}} > 0)
+        {
+            //google.charts.setOnLoadCallback(drawChartd100);
+        }
     </script>
 
 </form>
